force-app/main/default/objects/Message__c/Message__c.object-meta.xml
<CustomObject>
    <description>This is for sending/Storing the messages.</description>
    <label>Message</label>
    <nameField>
        <displayFormat>MSG-{000000}</displayFormat>
        <label>MSG Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>