force-app/main/default/objects/Message__c/fields/Chatbot_on_off__c.field-meta.xml
<CustomField>
    <fullName>Chatbot_on_off__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Chatbot on/off</label>
    <type>Checkbox</type>
</CustomField>