force-app/main/default/objects/Message__c/fields/Delivery_Status__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Status__c</fullName>
    <description>Denotes the current status of the message Whether sent, received or failed etc.,</description>
    <inlineHelpText>Denotes the current status of the message Whether sent, received or failed etc.,</inlineHelpText>
    <label>Delivery Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delivered</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Undelivered</fullName>
            </value>
            <value>
                <fullName>Read</fullName>
            </value>
            <value>
                <fullName>Queued</fullName>
                <isActive>false</isActive>
                <label>Queued</label>
            </value>
            <value>
                <fullName>Unknownstatus</fullName>
                <isActive>false</isActive>
                <label>Unknownstatus</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>