force-app/main/default/objects/Message__c/fields/Dialogue__c.field-meta.xml
<CustomField>
    <fullName>Dialogue__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dialogue</label>
    <referenceTo>Dialogue__c</referenceTo>
    <relationshipLabel>Messages</relationshipLabel>
    <relationshipName>Messages</relationshipName>
    <type>Lookup</type>
</CustomField>