force-app/main/default/objects/Message__c/fields/Document_SHA256__c.field-meta.xml
<CustomField>
    <fullName>Document_SHA256__c</fullName>
    <label>Document SHA256</label>
    <type>TextArea</type>
</CustomField>