force-app/main/default/objects/Message__c/fields/Error_Code__c.field-meta.xml
<CustomField>
    <fullName>Error_Code__c</fullName>
    <description>Stores the unique Error Code for the Failed Messages</description>
    <inlineHelpText>Stores the unique Error Code for the Failed Messages</inlineHelpText>
    <label>Error Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>