force-app/main/default/objects/Message__c/fields/Failed_Reason__c.field-meta.xml
<CustomField>
    <fullName>Failed_Reason__c</fullName>
    <description>Stores the Error message if the sent message has been failed</description>
    <inlineHelpText>Stores the Error message if the sent message has been failed</inlineHelpText>
    <label>Failed Reason</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>