force-app/main/default/objects/Message__c/fields/File_Content__c.field-meta.xml
<CustomField>
    <fullName>File_Content__c</fullName>
    <description>Stores the file content(image/png) in the form of BlobData</description>
    <inlineHelpText>Stores the file content(image/png) in the form of BlobData</inlineHelpText>
    <label>File Content</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>