force-app/main/default/objects/Message__c/fields/File_Name__c.field-meta.xml
<CustomField>
    <fullName>File_Name__c</fullName>
    <description>Stores the name of the file that is being sent with the message!</description>
    <inlineHelpText>Stores the name of the file that is being sent with the message!</inlineHelpText>
    <label>File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>