force-app/main/default/objects/Message__c/fields/FilesBiSync_Related_Folder_Ids__c.field-meta.xml
<CustomField>
    <fullName>FilesBiSync_Related_Folder_Ids__c</fullName>
    <label>FilesBiSync_Related_Folder_Ids</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>