force-app/main/default/objects/Message__c/fields/From_Number__c.field-meta.xml
<CustomField>
    <fullName>From_Number__c</fullName>
    <label>From Number</label>
    <type>Phone</type>
</CustomField>