force-app/main/default/objects/Message__c/fields/Image_type__c.field-meta.xml
<CustomField>
    <fullName>Image_type__c</fullName>
    <label>Image type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>