force-app/main/default/objects/Message__c/fields/is_Bulk__c.field-meta.xml
<CustomField>
    <fullName>is_Bulk__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Bulk</label>
    <type>Checkbox</type>
</CustomField>