force-app/main/default/objects/Message__c/fields/Is_Outgoing__c.field-meta.xml
<CustomField>
    <fullName>Is_Outgoing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Outgoing</label>
    <type>Checkbox</type>
</CustomField>