force-app/main/default/objects/Message__c/fields/Location_Address__c.field-meta.xml
<CustomField>
    <fullName>Location_Address__c</fullName>
    <label>Location Address</label>
    <type>TextArea</type>
</CustomField>