force-app/main/default/objects/Message__c/fields/Location_Latitude__c.field-meta.xml
<CustomField>
    <fullName>Location_Latitude__c</fullName>
    <label>Location Latitude</label>
    <length>255</length>
    <type>Text</type>
</CustomField>