force-app/main/default/objects/Message__c/fields/Location_Link__c.field-meta.xml
<CustomField>
    <fullName>Location_Link__c</fullName>
    <label>Location Link</label>
    <type>TextArea</type>
</CustomField>