force-app/main/default/objects/Message__c/fields/Media_File__c.field-meta.xml
<CustomField>
    <fullName>Media_File__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To indicate whether the current sms rec has media files in it or not</description>
    <label>Media File</label>
    <type>Checkbox</type>
</CustomField>