force-app/main/default/objects/Message__c/fields/Media_ID__c.field-meta.xml
<CustomField>
    <fullName>Media_ID__c</fullName>
    <label>Media ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>