force-app/main/default/objects/Message__c/fields/Media_Url__c.field-meta.xml
<CustomField>
    <fullName>Media_Url__c</fullName>
    <label>Media Url</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>