force-app/main/default/objects/Message__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Stores the message body content</description>
    <inlineHelpText>Stores the message body content</inlineHelpText>
    <label>Message</label>
    <length>130072</length>
    <type>Html</type>
</CustomField>