force-app/main/default/objects/Message__c/fields/Message_Id__c.field-meta.xml
<CustomField>
    <fullName>Message_Id__c</fullName>
    <description>The Unique ID of the message</description>
    <externalId>true</externalId>
    <inlineHelpText>The Unique ID of the message</inlineHelpText>
    <label>Message Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>