force-app/main/default/objects/Message__c/fields/Message_Template__c.field-meta.xml
<CustomField>
    <fullName>Message_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Message Template</label>
    <referenceTo>Message_Template__c</referenceTo>
    <relationshipLabel>Messages</relationshipLabel>
    <relationshipName>Messages</relationshipName>
    <type>Lookup</type>
</CustomField>