force-app/main/default/objects/Message__c/fields/Message_Template_Body__c.field-meta.xml
<CustomField>
    <fullName>Message_Template_Body__c</fullName>
    <label>Message Template Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>