force-app/main/default/objects/Message__c/fields/Messaging_Session__c.field-meta.xml
<CustomField>
    <fullName>Messaging_Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Messaging Session</label>
    <referenceTo>Messaging_Session__c</referenceTo>
    <relationshipLabel>Messages</relationshipLabel>
    <relationshipName>Messages</relationshipName>
    <type>Lookup</type>
</CustomField>