force-app/main/default/objects/Message__c/fields/Option_Dialog__c.field-meta.xml
<CustomField>
    <fullName>Option_Dialog__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Option Dialog</label>
    <referenceTo>Option_Dialog__c</referenceTo>
    <relationshipLabel>Messages</relationshipLabel>
    <relationshipName>Messages</relationshipName>
    <type>Lookup</type>
</CustomField>