force-app/main/default/objects/Message__c/fields/Outgoing__c.field-meta.xml
<CustomField>
    <fullName>Outgoing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Outgoing?</label>
    <type>Checkbox</type>
</CustomField>