force-app/main/default/objects/Message__c/fields/Parent_Message_Id__c.field-meta.xml
<CustomField>
    <fullName>Parent_Message_Id__c</fullName>
    <label>Parent Message Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>