force-app/main/default/objects/Message__c/fields/Pinned__c.field-meta.xml
<CustomField>
    <fullName>Pinned__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This shows whether the message is pinned by the user on the chat Application</description>
    <inlineHelpText>This shows whether the message is pinned by the user on the chat Application</inlineHelpText>
    <label>Pinned</label>
    <type>Checkbox</type>
</CustomField>