force-app/main/default/objects/Message__c/fields/Response__c.field-meta.xml
<CustomField>
    <fullName>Response__c</fullName>
    <description>Store the response of the Message request</description>
    <inlineHelpText>For storing the response of the Message request</inlineHelpText>
    <label>Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>