force-app/main/default/objects/Message__c/fields/Retry_Count__c.field-meta.xml
<CustomField>
    <fullName>Retry_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Stores the count of retries for a message if it&apos;s failed</description>
    <inlineHelpText>Stores the count of retries for a message if it&apos;s failed</inlineHelpText>
    <label>Retry Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>