force-app/main/default/objects/Message__c/fields/Scheduled_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Date_Time__c</fullName>
    <label>Scheduled Date/Time</label>
    <type>DateTime</type>
</CustomField>