force-app/main/default/objects/Message__c/fields/Sent_By_User__c.field-meta.xml
<CustomField>
    <fullName>Sent_By_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Which User sent this message</description>
    <label>Sent By User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SMS</relationshipName>
    <type>Lookup</type>
</CustomField>