force-app/main/default/objects/Message__c/fields/Sent_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Sent_Date_and_Time__c</fullName>
    <description>Stores the Date and Time of the sent message</description>
    <inlineHelpText>Stores the Date and Time of the sent message</inlineHelpText>
    <label>Sent Date and Time</label>
    <type>DateTime</type>
</CustomField>