force-app/main/default/objects/Message__c/fields/Starred__c.field-meta.xml
<CustomField>
    <fullName>Starred__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This shows whether the message is starred by the user in the chat Application</description>
    <inlineHelpText>This shows whether the message is starred by the user in the chat Application</inlineHelpText>
    <label>Starred</label>
    <type>Checkbox</type>
</CustomField>