force-app/main/default/objects/Message__c/fields/To_Number__c.field-meta.xml
<CustomField>
    <fullName>To_Number__c</fullName>
    <description>Stores the recipient number</description>
    <inlineHelpText>Stores the recipient number</inlineHelpText>
    <label>To Number</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>