force-app/main/default/objects/Message__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>The Message is sent (Outbound) or Received (Inbound)</description>
    <inlineHelpText>The Message is sent (Outbound) or Received (Inbound)</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>