force-app/main/default/objects/Message__c/fields/Video_SHA256__c.field-meta.xml
<CustomField>
    <fullName>Video_SHA256__c</fullName>
    <label>Video SHA256</label>
    <length>255</length>
    <type>Text</type>
</CustomField>