force-app/main/default/objects/Message__c/fields/Video_Type__c.field-meta.xml
<CustomField>
    <fullName>Video_Type__c</fullName>
    <label>Video Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>