force-app/main/default/objects/Message__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Delivery_Status__c</columns>
    <columns>Channel__c</columns>
    <columns>Message_Body__c</columns>
    <columns>To_Number__c</columns>
    <columns>Type__c</columns>
    <columns>Message_Id__c</columns>
    <columns>Failed_Reason__c</columns>
    <columns>Media_Url__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>