force-app/main/default/objects/Message__c/listViews/Delivered_Message.listView-meta.xml
<ListView>
    <fullName>Delivered_Message</fullName>
    <columns>NAME</columns>
    <columns>Message__c</columns>
    <columns>To_Number__c</columns>
    <columns>File_Name__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Outbound</value>
    </filters>
    <filters>
        <field>Delivery_Status__c</field>
        <operation>equals</operation>
        <value>Delivered</value>
    </filters>
    <label>Delivered Message</label>
</ListView>